--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,16 @@
 		<artifactId>commons-codec</artifactId>
 		<version>1.9</version>
 	</dependency>
-        <dependency>
+    <dependency>
 	  <groupId>org.apache.httpcomponents</groupId>
 	  <artifactId>httpclient</artifactId>
 	  <version>4.4</version>
-        </dependency>
+    </dependency>
+    <dependency>
+	  <groupId>com.google.code.gson</groupId>
+	  <artifactId>gson</artifactId>
+	  <version>2.3.1</version>
+    </dependency>
   </dependencies>
   
   <build>
